[project]
name = "feedbacks"
version = "0.1.0"
description = ""
authors = [
    {name = "Sherlock428",email = "cauanreis128@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standart] (>=0.121.3,<0.122.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "feedbacks", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
